// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect /> matches snapshot 1`] = `
<div>
  <div
    class=" css-kh89cj-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-6-toggle-button"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-6-label downshift-6-toggle-button"
      class="select-btn"
      id="downshift-6-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-6-label"
      data-testid="list-container"
      id="downshift-6-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
    </ul>
  </div>
</div>
`;

exports[`<MultiSelect /> matches snapshot with \`altLabel = true\` 1`] = `
<div>
  <div
    class="alt-label css-kh89cj-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-8-toggle-button"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-8-label downshift-8-toggle-button"
      class="select-btn"
      id="downshift-8-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-8-label"
      data-testid="list-container"
      id="downshift-8-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
    </ul>
  </div>
</div>
`;

exports[`<MultiSelect /> matches snapshot with \`block = true\` 1`] = `
<div>
  <div
    class=" css-g1aj0v-inputContainerBaseStyles-inputContainerBaseStyles-inputBaseStyles-inputBaseStyles-multiSelectContainer-multiSelectContainer"
  >
    <label
      class="css-xs6o3g-label-label"
      for="downshift-7-toggle-button"
    >
      Test Multi-select
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label downshift-7-toggle-button"
      class="select-btn"
      id="downshift-7-toggle-button"
      type="button"
    >
      Test placeholder
      <svg-file-stub
        height="24"
      />
    </button>
    <ul
      aria-labelledby="downshift-7-label"
      data-testid="list-container"
      id="downshift-7-menu"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="content"
      >
        <span
          class="css-26eo9i-textContainer-textContainer"
          data-testid="text-component"
        >
           Select one or more items
        </span>
        <button
          class="close-btn"
          data-testid="close-btn"
        >
          <svg-file-stub
            height="20"
          />
        </button>
      </div>
    </ul>
  </div>
</div>
`;
